remove android-container-pi in USE flag and add device-appid

--- a/make.conf
+++ b/make.conf
@@ -2,6 +2,6 @@ CHROMEOS_KERNEL_CONFIG="/mnt/host/source/src/overlays/overlay-orangepi5-openfyde
 ROCKCHIP_DTS=rk3588s-orangepi-5
 
 USE="${USE} os_install_service binder"
-USE="${USE} android-container-pi arc_rk3588 arc_remove_gms arc_fydeos_service arc_preinstall_apk"
+USE="${USE} arc_rk3588 arc_remove_gms arc_fydeos_service arc_preinstall_apk"
 USE="${USE} tpm_insecure_fallback"
 USE="${USE} tpm_insecure_fallback linux_firmware_iwlwifi-all"
